<resources>
    <string name="app_name">FoldDetector</string>
    <string name="main_menu_1">Settings</string>
    <string name="main_menu_2">About</string>
    <string name="main_menu_3">Refresh</string>
    <string name="main_menu_4">Internal Log</string>

    <string name="log_main">Log</string>
    <string name="log_net">Network</string>

    <string name="no_settings">No Settings</string>
    
    <string name="main_card_statistic_title">Feed Check</string>
    <string name="main_card_statistic_indicator_up">v6/feed api check</string>
    <string name="feed_id">Feed Link</string>
    <string name="feed_content">Content</string>
    <string name="feed_recommended">Recommended</string>
    <string name="feed_headline">Headline</string>
    <string name="feed_hidden">Hidden</string>

    <string name="main_card_history_title">App publish check</string>
    <string name="main_card_history_indicator">v6/apk api check</string>
    <string name="apk_pkg_name">Application package name</string>
    <string name="apk_publish_state">Publish state</string>
    <string name="apk_publish_tags">Tags</string>
    <string name="apk_publish_keywords">Keywords</string>

    <string name="main_card_help">Help and Support</string>

    <string name="til_error_inv_param">Invalid parameter</string>
    <string name="toast_copied">Copied</string>
    <string name="toast_perm_denied">Permission Denied</string>
    <string name="ad_pb">Yes</string>
    <string name="ad_nb">Cancel</string>
    <string name="ad_pb2">Yes</string>
    <string name="ad_nb2">No</string>
    <string name="ad_nb3">Close</string>
    <string name="ad_nb4">Clear</string>
    <string name="ad_processing">Processing…</string>
    <string name="empty_view">Empty</string>

    <!--About-->
    <string name="au_l_1">Version</string>
    <string name="au_l_2">Developer</string>
    <string name="au_l_2_1">AlcatrazDev</string>
    <string name="au_l_3">Check sourcecode</string>
    <string name="au_l_4">Open source Licenses</string>
    <string name="au_l_4_1">Respect to opensource</string>
    <string name="au_osp">Opensource Projects</string>

</resources>
