<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fold_feed_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fold_feed_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:title="@string/main_card_statistic_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/fold_feed_holder_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_rss_feed_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_toEndOf="@id/fold_feed_holder_icon"
                    android:layout_toRightOf="@id/fold_feed_holder_icon"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fold_feed_content_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/feed_content"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fold_feed_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:textAllCaps="false"
                        android:textIsSelectable="true" />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/fold_feed_recommended_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="16dp"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_star_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toEndOf="@id/fold_feed_recommended_indicator"
                    android:layout_toRightOf="@id/fold_feed_recommended_indicator"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feed_recommended"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/fold_feed_recommended"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/fold_feed_headline_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="16dp"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_view_headline_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toEndOf="@id/fold_feed_headline_indicator"
                    android:layout_toRightOf="@id/fold_feed_headline_indicator"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feed_headline"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/fold_feed_headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/fold_feed_hidden_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="16dp"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_volume_off_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toEndOf="@id/fold_feed_hidden_indicator"
                    android:layout_toRightOf="@id/fold_feed_hidden_indicator"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feed_hidden"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/fold_feed_hidden"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textIsSelectable="true" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>